syntax = "proto3";

option go_package = ".;pb";

import "common-message.proto";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";


message ForgetPasswordRequest {
  string apiKey = 101;
  string phoNo = 55;
}

message ForgetPasswordResponse {
    ResponseData responseData = 10;
}

message ConformForgetPasswordOTPRequest {
  string apiKey = 102;
  string otp = 59;
  string token = 60;
}

message ConformForgetPasswordOTPResponse {
  string newPassToken = 71;
}

message SetNewPasswordRequest {
  string apiKey = 103;
  string newPassToken = 72;
  string newPassword = 73;
}

message SetNewPasswordResponse {
  bool status = 74;
}
